--- a/modules/mux/Modules.am
+++ b/modules/mux/Modules.am
@@ -24,9 +24,10 @@ mux_LTLIBRARIES += libmux_ps_plugin.la
 libmux_ts_plugin_la_SOURCES = \
 	mpeg/pes.c mpeg/pes.h \
 	mpeg/csa.c mpeg/csa.h \
+	mpeg/cissa.c mpeg/cissa.h \
 	mpeg/ts.c mpeg/bits.h mpeg/dvbpsi_compat.h
-libmux_ts_plugin_la_CFLAGS = $(AM_CFLAGS) $(DVBPSI_CFLAGS)
-libmux_ts_plugin_la_LIBADD = $(DVBPSI_LIBS)
+libmux_ts_plugin_la_CFLAGS = $(AM_CFLAGS) $(DVBPSI_CFLAGS) $(GCRYPT_CFLAGS)
+libmux_ts_plugin_la_LIBADD = $(DVBPSI_LIBS) $(GCRYPT_LIBS)
 if HAVE_DVBPSI
 mux_LTLIBRARIES += libmux_ts_plugin.la
 endif
